--- a/components.json
+++ b/components.json
@@ -3,6 +3,12 @@
   "style": "default",
   "rsc": false,
   "tsx": true,
+  "tailwind": {
+    "config": "tailwind.config.js",
+    "css": "src/index.css",
+    "baseColor": "slate",
+    "cssVariables": true
+  },
   "alias": {
     "@/components": "./src/components",
     "@/lib": "./src/lib",
